--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="circle_page_indicator_size">6dp</dimen>
+    <dimen name="survey_main_margin_top">32dp</dimen>
 </resources>
