--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#141a41</color>
     <color name="colorPrimaryDark">#0f0f31</color>
     <color name="colorAccent">#fd2b32</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="grey">#4e4e4e</color>
 </resources>
